--- a/webapp/src/components/pages/mainPage/MainPage.scss
+++ b/webapp/src/components/pages/mainPage/MainPage.scss
@@ -5,12 +5,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .header {
   width: 70rem;
   display: flex;
   flex-direction: column;
+  align-self: center;
 }
 
 .title {
@@ -32,4 +34,10 @@
   letter-spacing: 0.05rem;
   color: var(--white1);
   animation: tracking-in-expand 1.35s cubic-bezier(0.33, 1, 0.68, 1) 1s forwards;
+}
+
+.product-card-container {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
 }
