--- a/webapp/src/Styles.scss
+++ b/webapp/src/Styles.scss
@@ -81,3 +81,14 @@ body {
     opacity: 1;
   }
 }
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+    transform: translateY(12rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
