--- a/webapp/src/Styles.scss
+++ b/webapp/src/Styles.scss
@@ -1,7 +1,7 @@
 html,
 :root {
   --white: #fbfbfb;
-  --white1: #eeebeb;
+  --white1: #ffffff;
 
   --orange1: rgba(255, 182, 80, 1);
   --orange2: rgba(255, 156, 81, 1);
