--- a/webapp/src/components/CardItem/CardItem.scss
+++ b/webapp/src/components/CardItem/CardItem.scss
@@ -35,7 +35,7 @@
 .price {
   transition: 0.5s ease;
   margin-top: 0.5rem;
-
+  color: var(--dark2);
   font-size: 1.8rem;
   font-family: "Montserrat-Bold";
 }
@@ -54,7 +54,7 @@
 }
 .product-name {
   font-size: 1.4rem;
-  color: var(--white1);
+  color: var(--dark2);
   letter-spacing: var(--letterSpacing);
   height: 3rem;
   margin-top: 0.2rem;
