--- a/webapp/src/components/pages/mainPage/MainPage.scss
+++ b/webapp/src/components/pages/mainPage/MainPage.scss
@@ -45,6 +45,31 @@
   margin: 1rem;
 }
 
+.product:nth-child(0) {
+  opacity: 0;
+  animation: appear 1s ease 1.1s forwards;
+}
+.product:nth-child(1) {
+  opacity: 0;
+
+  animation: appear 1s ease 1.3s forwards;
+}
+.product:nth-child(2) {
+  opacity: 0;
+
+  animation: appear 1s ease 1.5s forwards;
+}
+.product:nth-child(3) {
+  opacity: 0;
+
+  animation: appear 1s ease 1.7s forwards;
+}
+.product:nth-child(4) {
+  opacity: 0;
+
+  animation: appear 1s ease 1.9s forwards;
+}
+
 .product-name {
   color: var(--dark2);
 }
