Adding navigation to Cart

--- a/webapp/src/components/CartItem/CartItem.scss
+++ b/webapp/src/components/CartItem/CartItem.scss
@@ -1,9 +1,8 @@
-.container {
-  height: 20rem;
-  width: 10rem;
-  background-color: white;
+.cart-container {
+  height: calc(100vh - var(--topMenuHeight));
+  background-color: var(--dark1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-h2 {
-  color: #000000;
-}
