Revert "Adding navigation to Cart"

--- a/webapp/src/components/CartItem/CartItem.scss
+++ b/webapp/src/components/CartItem/CartItem.scss
@@ -1,8 +1,9 @@
-.cart-container {
-  height: calc(100vh - var(--topMenuHeight));
-  background-color: var(--dark1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.container {
+  height: 20rem;
+  width: 10rem;
+  background-color: white;
 }
 
+h2 {
+  color: #000000;
+}
