--- a/webapp/src/components/pages/ContactPage/ContactPage.scss
+++ b/webapp/src/components/pages/ContactPage/ContactPage.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+  justify-content: center;
 }
 
 .title {
@@ -28,7 +29,11 @@
   text-align: center;
   margin-top: 1rem;
   opacity: 0;
-
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-self: center;
+  justify-content: center;
   font-size: 1.35rem;
   letter-spacing: 0.05rem;
   color: var(--white1);
