--- a/webapp/src/components/menu/TopMenu.module.scss
+++ b/webapp/src/components/menu/TopMenu.module.scss
@@ -1,4 +1,6 @@
-.menu-container {
+@import "./../../Styles.scss";
+
+.menucontainer {
   position: sticky;
   top: 0px;
   height: var(--topMenuHeight);
@@ -26,7 +28,7 @@
   justify-content: space-around;
 }
 
-.menu-item {
+.menuitem {
   cursor: pointer;
   font-size: 1.2rem;
   text-align: center;
@@ -34,7 +36,7 @@
   transition: 0.35s ease;
 }
 
-.menu-item:hover {
+.menuitem:hover {
   color: var(--orange2);
   transform: translateY(-0.2rem);
 }
@@ -51,7 +53,7 @@
   animation: logo-spin 25s infinite linear;
 }
 
-.login-icon {
+.loginicon {
   cursor: pointer;
   font-size: 2rem;
   align-self: center;
@@ -59,13 +61,32 @@
   transition: 0.35s ease;
 }
 
-.login-icon:hover {
+.loginicon:hover {
   filter: drop-shadow(var(--dropShadowOrange));
   font-size: 2rem;
   align-self: center;
   margin-right: 3.5rem;
   color: var(--orange2);
 }
+
+.cartcontainer {
+  display: relative;
+}
+.cartcounter {
+  user-select: none;
+  font-size: 1.3rem;
+  transform: translateX(2.4rem);
+  color: var(--orange2);
+  font-family: "Montserrat-Bold";
+  top: -0rem;
+  position: absolute;
+  background-color: transparent;
+}
+
+.wobble {
+  animation: wobble 0.8s both;
+}
+
 a,
 a:hover,
 a:focus,
