--- a/webapp/src/components/Cart/Cart.scss
+++ b/webapp/src/components/Cart/Cart.scss
@@ -49,3 +49,28 @@
   display: flex;
   flex-direction: column;
 }
+
+.buttons {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  button {
+    cursor: pointer;
+    font-family: "Montserrat-Bold";
+    background-color: var(--orange2);
+    margin-top: 5rem;
+    font-size: 1.3rem;
+    padding: 1rem;
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
+
+    border-radius: 0.5rem;
+    transition: 0.35s;
+  }
+  button:hover {
+    filter: drop-shadow(0px 0px 7px var(--orange2));
+  }
+}
