--- a/webapp/src/components/OrderItem/OrderCardItem.scss
+++ b/webapp/src/components/OrderItem/OrderCardItem.scss
@@ -39,4 +39,11 @@
   color: var(--white);
   letter-spacing: var(--letterSpacing);
   margin-top: 0.2rem;
+  font-family: "Montserrat-Bold";
+}
+.product-ammount {
+  font-size: 1.4rem;
+  color: var(--white);
+  letter-spacing: var(--letterSpacing);
+  margin-top: 0.2rem;
 }
