--- a/webapp/src/components/CardItem/CardItem.scss
+++ b/webapp/src/components/CardItem/CardItem.scss
@@ -4,14 +4,14 @@
   color: var(--white);
 }
 
-.product-image:hover {
+.card-product-image:hover {
   transform: scale(1.05);
   .price {
     margin-top: 1rem;
   }
 }
 
-.product-image {
+.card-product-image {
   cursor: pointer;
   transition: 0.5s ease;
   border-radius: 0.5rem;
