Added responsive menu bar

--- a/webapp/src/Styles.scss
+++ b/webapp/src/Styles.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 html,
 :root {
   --white: #fbfbfb;
@@ -22,6 +24,13 @@ html,
 
 html {
   background-color: var(--dark1);
+  font-size: 16px;
+}
+
+@media (min-width: 0px) and (max-width: $screen-sm-max) {
+  html {
+    font-size: 14px;
+  }
 }
 
 h1,
