--- a/webapp/src/components/menu/TopMenu.module.scss
+++ b/webapp/src/components/menu/TopMenu.module.scss
@@ -104,3 +104,73 @@ a:active {
     transform: rotate(360deg);
   }
 }
+
+.mobilemenucontainer {
+  display: none;
+}
+@media (min-width: 0px) and (max-width: $screen-sm-max) {
+  .menucontainer {
+    display: none;
+  }
+
+  .mobilemenucontainer {
+    position: sticky;
+    top: 0px;
+    height: var(--topMenuHeight);
+    background-color: var(--dark2);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+
+    .menu {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+    .logo {
+      margin-left: auto;
+    }
+
+    .menuicon {
+      margin-left: 1rem;
+      margin-right: 0;
+    }
+    .cartcontainer {
+      width: 3rem;
+      margin-right: 1rem;
+      margin-left: auto;
+    }
+  }
+}
+
+.expandablemenu {
+  width: 0px;
+  position: fixed;
+  opacity: 0;
+  top: 0px;
+  background-color: var(--dark2);
+  height: 100vh;
+  transition: 0.5s ease;
+  z-index: 1;
+  .links {
+    display: none;
+    margin-top: var(--topMenuHeight);
+    padding-top: 2rem;
+    flex-direction: column;
+    justify-content: start;
+  }
+  .links > div {
+    margin-bottom: 1rem;
+  }
+}
+
+.showmenu {
+  width: 60%;
+  opacity: 1;
+  .links {
+    display: flex;
+  }
+}
