--- a/webapp/src/components/pages/mainPage/MainPage.module.scss
+++ b/webapp/src/components/pages/mainPage/MainPage.module.scss
@@ -1,4 +1,6 @@
-.header-container {
+@import "./../../../variables.scss";
+@import "./../../../Styles.scss";
+.headercontainer {
   width: 100%;
   height: 115vh;
   background-color: var(--dark1);
@@ -33,7 +35,7 @@
   letter-spacing: 0.05rem;
   color: var(--white1);
   animation: tracking-in-expand 1.35s cubic-bezier(0.33, 1, 0.68, 1) 0.7s
-  forwards;
+    forwards;
 }
 
 .text {
@@ -45,4 +47,18 @@
   letter-spacing: 0.05rem;
   color: var(--white1);
   animation: appear 1s ease 1.5s forwards;
+}
+
+@media (min-width: 0px) and (max-width: $screen-md-max) {
+  .header {
+    width: 100%;
+  }
+  .subtitle {
+    width: 70%;
+    margin-left: 15%;
+  }
+  .text {
+    width: 90%;
+    margin-left: 5%;
+  }
 }
