--- a/webapp/src/components/pages/shopPage/ShopPage.module.scss
+++ b/webapp/src/components/pages/shopPage/ShopPage.module.scss
@@ -1,4 +1,6 @@
-.header-container {
+@import "./../../../Styles.scss";
+
+.headercontainer {
   width: 100%;
   height: 115vh;
   background-color: var(--dark1);
@@ -8,7 +10,8 @@
 }
 
 .header {
-  width: 70rem;
+  width: 100%;
+  max-width: 70rem;
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -28,34 +31,35 @@
   text-align: center;
   margin-top: 1rem;
   opacity: 0;
-
+  width: 80%;
+  margin-left: 10%;
   font-size: 1.35rem;
   letter-spacing: 0.05rem;
   color: var(--white1);
   animation: tracking-in-expand 1.35s cubic-bezier(0.33, 1, 0.68, 1) 0.7s
-  forwards;
+    forwards;
 }
 
-.product-card-container {
+.productcardcontainer {
   margin-top: 6rem;
   display: flex;
   flex-direction: row;
 }
-.product-card-container > * {
+.productcardcontainer > * {
   margin: 1rem;
 }
 
 .product:nth-child(0) {
-  opacity: 0;
+  opacity: 1;
   animation: appear 1s ease 1.1s forwards;
 }
 .product:nth-child(1) {
-  opacity: 0;
+  opacity: 1;
 
   animation: appear 1s ease 1.3s forwards;
 }
 .product:nth-child(2) {
-  opacity: 0;
+  opacity: 1;
 
   animation: appear 1s ease 1.5s forwards;
 }
