--- a/webapp/src/components/CardItem/CardItem.scss
+++ b/webapp/src/components/CardItem/CardItem.scss
@@ -51,3 +51,14 @@
   height: 3rem;
   margin-top: 0.2rem;
 }
+
+.cart-icon {
+  transform: scale(1.1);
+  transition: 0.4s ease;
+  color: var(--orange2);
+}
+
+.cart-icon:hover {
+  cursor: pointer;
+  filter: drop-shadow(0px 0px 5px var(--orange2));
+}
