--- a/webapp/src/components/menu/TopMenu.module.scss
+++ b/webapp/src/components/menu/TopMenu.module.scss
@@ -69,9 +69,6 @@
   color: var(--orange2);
 }
 
-.cartcontainer {
-  display: relative;
-}
 .cartcounter {
   user-select: none;
   font-size: 1.3rem;
@@ -138,10 +135,16 @@ a:active {
       margin-left: 1rem;
       margin-right: 0;
     }
+    .loginicon {
+      margin-right: 0rem;
+    }
     .cartcontainer {
-      width: 3rem;
-      margin-right: 1rem;
+      margin-right: 2rem;
       margin-left: auto;
+      transform: translateY(3px);
+      .cartcounter {
+        transform: translateY(-1rem) translateX(2.2rem);
+      }
     }
   }
 }
