--- a/webapp/src/components/pages/ContactPage/ContactPage.module.scss
+++ b/webapp/src/components/pages/ContactPage/ContactPage.module.scss
@@ -1,14 +1,16 @@
-.header-container {
+@import "./../../../Styles.scss";
+.headercontainer {
   width: 100%;
-  height: 115vh;
   background-color: var(--dark1);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .header {
-  width: 70rem;
+  width: 100%;
+  max-width: 70rem;
   display: flex;
   flex-direction: column;
   align-self: center;
@@ -19,7 +21,7 @@
   margin-top: 7rem;
   opacity: 0;
   text-align: center;
-  font-size: 7rem;
+  font-size: 6rem;
   color: var(--orange2);
   filter: drop-shadow(0px 0px 5rem var(--white));
   animation: tracking-in-expand 1.35s cubic-bezier(0.33, 1, 0.68, 1) 0s forwards;
