--- a/webapp/src/components/Cart/POD/POD.scss
+++ b/webapp/src/components/Cart/POD/POD.scss
@@ -2,12 +2,52 @@
     font-size: 2rem;
     width: 70rem;
     background-color: white;
-    color: #1a1a1a;
+    color: var(--dark2);
+    border-radius: 0.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-top: 0.5rem;
 }
 
-.pod-button {
-    font-size: 2rem;
-    color: #1a1a1a;
-    background-color:white;
+.pod-header {
+    font-family: "Montserrat-Bold";
+    color: var(--orange1);
+    margin-left: 1rem;
+    margin-top: 1rem;
+}
+
+.pod-wrapper {
+    box-shadow: 0px 0px 3rem rgba(255, 255, 255, 0.192);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--dark3);
+    margin-top: 2rem;
+    margin-button: 2rem;
+}
+
+.buttonsPOD {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
+
+    button {
+        cursor: pointer;
+        font-family: "Montserrat-Bold";
+        background-color: var(--orange2);
+        font-size: 1.3rem;
+        padding: 1rem;
+        padding-left: 1.7rem;
+        padding-right: 1.7rem;
+
+        border-radius: 0.5rem;
+        transition: 0.35s;
+    }
+    button:hover {
+        filter: drop-shadow(0px 0px 7px var(--orange2));
+    }
 }
 
