--- a/webapp/src/Styles.scss
+++ b/webapp/src/Styles.scss
@@ -65,11 +65,9 @@ input:hover {
 button,
 button:hover,
 button:focus {
-  font-family: "Montserrat-Regular";
-
   border: 0;
   outline: 0;
-  background-color: white;
+  // background-color: white;
 }
 
 body {
