--- a/webapp/src/components/pages/shopPage/productDetails/ProductDetails.module.scss
+++ b/webapp/src/components/pages/shopPage/productDetails/ProductDetails.module.scss
@@ -5,12 +5,18 @@
   margin-left: 3rem;
 }
 
+.headerContainer{
+  display: flex;
+  flex-flow: row wrap;
+}
+
 .wrapperRight{
-  margin-top: 1rem;
+  margin-top: 6rem;
+  margin-left: 2rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
   font-size: 1.35rem;
+  width: 40rem;
   letter-spacing: 0.05rem;
   color: var(--white1);
 }
@@ -57,4 +63,8 @@
   margin-left: 3rem;
   margin-right: 5%;
   margin-top: 0.5rem;
+}
+
+.subheader{
+  margin-top: 5rem;
 }
