--- a/webapp/src/components/pages/shopPage/productDetails/ProductDetails.module.scss
+++ b/webapp/src/components/pages/shopPage/productDetails/ProductDetails.module.scss
@@ -7,7 +7,7 @@
 
 .wrapperWholeComment{
   margin-top: 0.75rem;
-  margin-left: 3rem;
+  margin-left: 4rem;
   margin-bottom: 0.75rem;
 }
 
@@ -84,16 +84,40 @@
 }
 
 .inputComment{
-  font-family: "Montserrat-Bold";
   font-size: 1rem;
-  width: 90%;
+  width: 70%;
   padding: 0.3rem;
   background-color: white;
   color: var(--dark2);
   border-radius: 0.5rem;
   margin-left: 3rem;
-  margin-right: 5%;
+  margin-right: 2.5%;
   margin-top: 0.5rem;
+  margin-bottom: 0.75rem;
+}
+
+.buttonsComments {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  margin-bottom: 1rem;
+
+  button {
+    cursor: pointer;
+    font-family: "Montserrat-Bold";
+    background-color: var(--orange2);
+    font-size: 1.3rem;
+    padding: 1rem;
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
+
+    border-radius: 0.5rem;
+    transition: 0.35s;
+  }
+  button:hover {
+    filter: drop-shadow(0px 0px 7px var(--orange2));
+  }
 }
 
 .subheader{
