--- a/webapp/src/Styles.scss
+++ b/webapp/src/Styles.scss
@@ -21,7 +21,18 @@ html,
 
   --topMenuHeight: 5rem;
 }
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
 
+::-webkit-scrollbar-thumb {
+  background: rgba(90, 90, 90);
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.2);
+}
 html {
   background-color: var(--dark1);
   font-size: 16px;
