--- a/webapp/src/components/Cart/ProductCartItem/ProductCartItem.scss
+++ b/webapp/src/components/Cart/ProductCartItem/ProductCartItem.scss
@@ -7,14 +7,7 @@
   flex-direction: row;
 }
 
-.product-image:hover {
-  transform: scale(1.05);
-  .price {
-    margin-top: 1rem;
-  }
-}
-
-.product-image {
+.product-cart-product-image {
   cursor: pointer;
   transition: 0.5s ease;
   border-radius: 0.5rem;
@@ -34,16 +27,33 @@
   font-size: 1.8rem;
   font-family: "Montserrat-Bold";
 }
+.add-to-cart {
+  span {
+    font-size: 2rem;
+    cursor: pointer;
+    transition: 0.25s ease;
+  }
+  span:hover {
+    filter: drop-shadow(var(--dropShadowOrange));
+  }
+  color: var(--orange2);
+  top: 1rem;
+  right: 1rem;
+}
 .product-name {
   font-size: 1.4rem;
   color: var(--white);
   letter-spacing: var(--letterSpacing);
   margin-top: 0.2rem;
-  font-family: "Montserrat-Bold";
 }
-.product-ammount {
-  font-size: 1.4rem;
-  color: var(--white);
-  letter-spacing: var(--letterSpacing);
-  margin-top: 0.2rem;
+.row2 {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  span {
+    color: var(--orange2);
+    cursor: pointer;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
 }
