--- a/webapp/src/components/pages/LoginPage/LoginPage.scss
+++ b/webapp/src/components/pages/LoginPage/LoginPage.scss
@@ -2,6 +2,7 @@
   height: calc(100vh - var(--topMenuHeight));
   background-color: var(--dark1);
   display: flex;
+  width: 100%;
   align-items: center;
   justify-content: center;
 }
@@ -9,10 +10,16 @@
 .login-wrapper {
   box-shadow: 0px 0px 3rem rgba(255, 255, 255, 0.192);
   border-radius: 1rem;
+  width: 95%;
+
   display: flex;
   flex-direction: column;
-  width: 30rem;
+  padding: 1rem;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  max-width: 25rem;
   height: 31.5rem;
+
   background-color: var(--white1);
   h2 {
     color: var(--orange2);
@@ -24,11 +31,11 @@
   h3 {
     color: black;
     margin: 0;
-    margin-left: 4.5rem;
+    margin-left: 0.5rem;
   }
   input {
     align-self: center;
-    width: 20rem;
+    width: 100%;
     font-size: 1.2rem;
     background-color: var(--white);
     padding: 0.5rem;
