--- a/webapp/src/components/pages/OrdersPage/OrdersPage.module.scss
+++ b/webapp/src/components/pages/OrdersPage/OrdersPage.module.scss
@@ -2,7 +2,6 @@
 
 .headercontainer {
   width: 100%;
-  height: 115vh;
   background-color: var(--dark1);
   display: flex;
   flex-direction: column;
@@ -14,6 +13,11 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+}
+
+.carditemscontainer {
+  overflow-y: overlay;
+  height: 30rem;
 }
 
 .title {
@@ -33,15 +37,21 @@
 }
 
 .ordercarditemcontainer {
-  margin-top: 6rem;
+  margin-top: 2rem;
   display: flex;
-  flex-direction: column;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 .ordercardcontainer > * {
   margin: 1rem;
 }
 
 .orderwrapper {
+  width: 95%;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
+  max-width: 30rem;
+  margin-top: 3rem;
   box-shadow: 0px 0px 3rem rgba(255, 255, 255, 0.192);
   border-radius: 1rem;
   display: flex;
