--- a/webapp/src/components/OrderItem/OrderCardItem.module.scss
+++ b/webapp/src/components/OrderItem/OrderCardItem.module.scss
@@ -49,7 +49,8 @@
 
 @media (min-width: 0px) and (max-width: $screen-xs-max) {
   .productimage {
-    width: 90%;
+    width: 75%;
+    margin-left: 7.5%;
     height: auto;
   }
 
