--- a/webapp/src/components/CardItem/CardItem.module.scss
+++ b/webapp/src/components/CardItem/CardItem.module.scss
@@ -4,29 +4,33 @@
   color: var(--white);
 }
 
-.card-product-image:hover {
+.cardproductimage:hover {
   transform: scale(1.05);
   .price {
     margin-top: 1rem;
   }
 }
 
-.card-product-image {
+.imagecontainer {
+  height: 17rem;
+  width: 100%;
+  overflow: hidden;
+}
+.cardproductimage {
   cursor: pointer;
   transition: 0.5s ease;
-  border-radius: 0.5rem;
   width: 100%;
-  height: 70%;
+  height: 100%;
 }
 
-.description-container {
+.descriptioncontainer {
   display: flex;
   flex-direction: row;
   .col1 {
-    width: 50%;
+    width: 80%;
   }
   .col2 {
-    width: 50%;
+    width: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,28 +41,28 @@
   transition: 0.5s ease;
   margin-top: 0.5rem;
   color: var(--white);
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   font-family: "Montserrat-Bold";
 }
-.add-to-cart {
+.addtocart {
   top: 1rem;
   right: 1rem;
 }
-.product-name {
-  font-size: 1.4rem;
+.productname {
+  font-size: 1.2rem;
   color: var(--white);
   letter-spacing: var(--letterSpacing);
   height: 3rem;
   margin-top: 0.2rem;
 }
 
-.cart-icon {
+.carticon {
   transform: scale(1.1);
   transition: 0.4s ease;
   color: var(--orange2);
 }
 
-.cart-icon:hover {
+.carticon:hover {
   cursor: pointer;
   filter: drop-shadow(0px 0px 5px var(--orange2));
 }
