--- a/webapp/src/components/pages/AboutPage/AboutPage.module.scss
+++ b/webapp/src/components/pages/AboutPage/AboutPage.module.scss
@@ -1,5 +1,8 @@
 @import "./../../../Styles.scss";
+
 .iframecontainer {
-  height: calc(100vh - var(--topMenuHeight));
+  background-color: var(--dark2) !important;
+  padding-top: var(--topMenuHeight);
+  height: calc(100vh);
   width: 100%;
 }
