--- a/webapp/src/components/pages/RegisterPage/RegisterPage.scss
+++ b/webapp/src/components/pages/RegisterPage/RegisterPage.scss
@@ -1,12 +1,18 @@
 .register-page-container {
-  height: calc(100vh - var(--topMenuHeight));
-  background-color: var(--dark1);
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1000;
 }
 
 .register-wrapper {
+  z-index: 1001;
   box-shadow: 0px 0px 3rem rgba(255, 255, 255, 0.192);
   border-radius: 1rem;
   display: flex;
