--- a/webapp/src/Styles.scss
+++ b/webapp/src/Styles.scss
@@ -11,8 +11,8 @@ html,
 
   --dropShadowOrange: 0px 0px 0.5rem var(--orange2);
 
-  --dark1: #282c34;
-  --dark2: #1a1a1a;
+  --dark1: #171717;
+  --dark2: #070707;
   --dark3: rgba(40, 44, 52, 0.58);
 
   --shadow2: 0px 0px 20px var(--dark2);
@@ -25,7 +25,11 @@ html,
   width: 10px;
   height: 10px;
 }
-
+hr {
+  width: 100%;
+  color: rgba(255, 255, 255, 0.432);
+  margin-bottom: 0.4rem;
+}
 ::-webkit-scrollbar-thumb {
   background: rgba(90, 90, 90);
 }
