Infinite loop to fix.

--- a/webapp/src/components/Cart/POD/ShowPodInformation.scss
+++ b/webapp/src/components/Cart/POD/ShowPodInformation.scss
@@ -28,6 +28,11 @@
   }
 }
 
+.combobox-container{
+  color: var(--dark2);
+  margin-bottom: 1rem;
+}
+
 .info-container {
   margin-left: 1rem;
   margin-bottom: 1rem;
