--- a/webapp/src/components/menu/TopMenu.module.scss
+++ b/webapp/src/components/menu/TopMenu.module.scss
@@ -232,7 +232,7 @@ a:active {
 
 .showcartmenu {
   padding-top: var(--topMenuHeight);
-  width: 20%;
+  width: 20rem;
   opacity: 1;
   display: flex;
   flex-direction: column;
