--- a/webapp/src/components/Cart/ProductCartItem/ProductCartItem.module.scss
+++ b/webapp/src/components/Cart/ProductCartItem/ProductCartItem.module.scss
@@ -2,8 +2,11 @@
 @import "./../../../Styles.scss";
 
 .productcartcontainer {
-  margin-top: 3rem;
-  height: 13rem;
+  border: 1px solid rgba(255, 255, 255, 0.089);
+
+  background-color: rgba(255, 255, 255, 0.027);
+  padding: 1rem;
+  height: 9rem;
   width: 100%;
   color: var(--white);
   display: flex;
@@ -14,20 +17,21 @@
   cursor: pointer;
   transition: 0.5s ease;
   border-radius: 0.5rem;
-  width: 55%;
   height: 100%;
 }
 
 .productcartdescriptioncontainer {
   margin-left: 3rem;
+  display: flex;
   flex-direction: row;
+  align-items: center;
+  width: 100%;
 }
 .price {
-  transition: 0.5s ease;
-  margin-top: 0.5rem;
-  color: var(--white);
-  font-size: 1.8rem;
-  font-family: "Montserrat-Bold";
+  text-align: center;
+
+  width: 25%;
+  font-size: 1.1rem;
 }
 .addtocart {
   span {
@@ -42,15 +46,27 @@
   top: 1rem;
   right: 1rem;
 }
-.product-name {
-  font-size: 1.4rem;
+.productname {
+  text-align: center;
+  width: 25%;
+  font-size: 1.3rem;
   color: var(--white);
   letter-spacing: var(--letterSpacing);
   margin-top: 0.2rem;
 }
+
+.totalprice {
+  text-align: center;
+  width: 25%;
+  font-size: 1.15rem;
+
+  color: var(--orange1);
+  font-weight: bold;
+}
 .row2 {
-  margin-top: 1rem;
+  width: 25%;
   display: flex;
+  justify-content: center;
   flex-direction: row;
   span {
     color: var(--orange2);
