--- a/webapp/src/components/pages/RegisterPage/RegisterPage.module.scss
+++ b/webapp/src/components/pages/RegisterPage/RegisterPage.module.scss
@@ -1,4 +1,4 @@
-.register-page-container {
+.registerpagecontainer {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -11,7 +11,7 @@
   z-index: 1000;
 }
 
-.register-wrapper {
+.registerwrapper {
   z-index: 1001;
   box-shadow: 0px 0px 3rem rgba(255, 255, 255, 0.192);
   border-radius: 1rem;
@@ -83,7 +83,7 @@ h3:nth-child(4) {
   margin-top: 1.5rem;
 }
 
-.register-text {
+.registertext {
   font-family: "Montserrat-Regular";
   margin-top: 1.5rem;
   text-align: center;
