--- a/webapp/src/components/pages/shopPage/productDetails/ProductDetails.module.scss
+++ b/webapp/src/components/pages/shopPage/productDetails/ProductDetails.module.scss
@@ -1,23 +1,31 @@
 @import "./../../../../Styles.scss";
 
-.wrapperLeft{
+.container {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapperLeft {
   margin-top: 3rem;
   margin-left: 3rem;
 }
 
-.wrapperWholeComment{
+.wrapperWholeComment {
   margin-top: 0.75rem;
   margin-left: 4rem;
   margin-bottom: 0.75rem;
 }
 
-.username{
+.username {
   font-family: "Montserrat-Bold";
   font-size: 1rem;
   margin-left: 0.5rem;
 }
 
-.commentWrapper{
+.commentWrapper {
   text-align: center;
   margin-top: 1rem;
   display: flex;
@@ -28,12 +36,13 @@
   color: var(--white1);
 }
 
-.headerContainer{
+.headerContainer {
+  margin-top: 4rem;
   display: flex;
   flex-flow: row wrap;
 }
 
-.wrapperRight{
+.wrapperRight {
   margin-top: 6rem;
   margin-left: 2rem;
   display: flex;
@@ -49,10 +58,9 @@
   transition: 0.5s ease;
   border-radius: 0.5rem;
   width: 20rem;
-  height: 100%;
 }
 
-.userImage{
+.userImage {
   cursor: pointer;
   transition: 0.5s ease;
   border-radius: 0.5rem;
@@ -60,30 +68,35 @@
   height: 3%;
 }
 
-.productName{
-  font-family: "Montserrat-Bold";
+.productName {
+  font-family: "Montserrat-Light";
+  font-weight: bold;
   font-size: 2rem;
   color: var(--orange1);
   margin-bottom: 1rem;
 }
 
-.subtitle{
+.subtitle {
   margin-top: 1rem;
-  font-family: "Montserrat-Bold";
+  font-family: "Montserrat-Regular";
   font-size: 1.5rem;
+  b {
+    color: var(--orange2);
+  }
 }
 
-.subsubtitle{
+.subsubtitle {
   font-family: "Montserrat-Bold";
   font-size: 1.5rem;
   margin-left: 3rem;
 }
 
-.text{
+.text {
   font-size: 1rem;
+  opacity: 0.9;
 }
 
-.inputComment{
+.inputComment {
   font-size: 1rem;
   width: 70%;
   padding: 0.3rem;
@@ -120,6 +133,12 @@
   }
 }
 
-.subheader{
-  margin-top: 5rem;
+.subheader {
+  margin-top: 1rem;
+}
+
+@media (min-width: 0px) and (max-width: $screen-sm-max) {
+  .headerContainer {
+    margin-top: 0;
+  }
 }
