--- a/webapp/src/components/Cart/POD/ShowPodInformation.scss
+++ b/webapp/src/components/Cart/POD/ShowPodInformation.scss
@@ -29,8 +29,9 @@
 }
 
 .combobox-container{
-  color: var(--dark2);
+  color: var(--orange2);
   margin-bottom: 1rem;
+  width: 20rem;
 }
 
 .info-container {
