--- a/webapp/src/components/Administration/AdminDashboard/AdminDashboard.module.scss
+++ b/webapp/src/components/Administration/AdminDashboard/AdminDashboard.module.scss
@@ -2,6 +2,7 @@
 @import "./../../../Styles.scss";
 
 .header {
+  margin-left: 1.5rem;
   margin-top: var(--topMenuHeight);
   width: 100%;
   max-width: 70rem;
@@ -12,6 +13,7 @@
 }
 
 .bigText{
+  margin-top: 1rem;
   width: 100%;
   background-color: var(--dark1);
   display: flex;
@@ -22,9 +24,14 @@
 }
 
 .leftPanel{
-
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .options{
-
+  color: var(--orange3);
+  font-size: 1.25rem;
+  font-weight: bold;
 }
