Fixed merge conflicts and redone parallax. Improved orders and pod styles.

--- a/webapp/src/Styles.scss
+++ b/webapp/src/Styles.scss
@@ -251,3 +251,8 @@ body {
     transform: translateX(-6px) rotate(-1.2deg);
   }
 }
+
+@function getParallaxScale($perspective, $distance) {
+  $result: ($perspective - $distance) / $perspective;
+  @return $result;
+}
