--- a/webapp/src/components/pages/shopPage/productDetails/ProductDetails.module.scss
+++ b/webapp/src/components/pages/shopPage/productDetails/ProductDetails.module.scss
@@ -116,7 +116,7 @@
   align-items: center;
   justify-content: left;
   margin-bottom: 1rem;
-
+  margin-left: 1rem;
   button {
     cursor: pointer;
     font-family: "Montserrat-Bold";
