Generic modal component and stock implementation.

--- a/webapp/src/Styles.scss
+++ b/webapp/src/Styles.scss
@@ -15,6 +15,8 @@ html,
   --dark2: #070707;
   --dark3: rgba(40, 44, 52, 0.58);
 
+  --shadow1: 0px 0px 20px 3px var(--dark2);
+
   --shadow2: 0px 0px 20px var(--dark2);
 
   --letterSpacing: 0.05rem;
