--- a/webapp/src/components/pages/DashboardPage/dashboard.module.scss
+++ b/webapp/src/components/pages/DashboardPage/dashboard.module.scss
@@ -14,3 +14,9 @@ h1 {
   transform-origin: 0 0;
   transform: translateZ(-2px) scale(3);
 }
+
+.testdiv {
+  height: 40rem;
+  width: 70vw;
+  background-color: white;
+}
