--- a/webapp/src/components/CardItem/CardItem.module.scss
+++ b/webapp/src/components/CardItem/CardItem.module.scss
@@ -12,6 +12,7 @@
 }
 
 .imagecontainer {
+  position: relative;
   height: 17rem;
   width: 100%;
   overflow: hidden;
@@ -21,6 +22,25 @@
   transition: 0.5s ease;
   width: 100%;
   height: 100%;
+}
+
+.lowstock {
+  filter: opacity(0.95);
+  z-index: 10;
+  padding: 0.3rem;
+  padding-inline: 0.7rem;
+  border-radius: 0.5rem;
+  box-shadow: var(--shadow1);
+  font-weight: bold;
+  background-color: var(--dark1);
+  position: absolute;
+  bottom: 5%;
+  left: 5%;
+  color: var(--orange2);
+}
+
+.outofstockimage {
+  filter: brightness(0.4);
 }
 
 .descriptioncontainer {
@@ -66,4 +86,13 @@
 .carticon:hover {
   cursor: pointer;
   filter: drop-shadow(0px 0px 5px var(--orange2));
+}
+
+.cartoutofstock {
+  color: gray !important;
+  cursor: default;
+}
+.cartoutofstock:hover {
+  cursor: default;
+  filter: drop-shadow(0px 0px 0px black);
 }
